Template da mensagem do e-mail

--- a/src/main/resources/templates/email/confirmacao.html
+++ b/src/main/resources/templates/email/confirmacao.html
@@ -60,7 +60,7 @@
 		
 		<p>
 			Mensagem: <span
-				th:text="${cliente.endereco.logradouro}"></span>
+				th:text="${cliente.mensagem}"></span>
 		</p>
 		
 	</div>
